Revert "atcConstituentTables.vb -- more checking to catch errors if hbn not written"
This reverts commit b2d65da5c060cd73685c24f9a5cdc5001881a350.

--- a/atcMetCmp/atcMetCmp-D4EM15.vbproj
+++ b/atcMetCmp/atcMetCmp-D4EM15.vbproj
@@ -249,6 +249,11 @@
       <Name>atcData-D4EM15</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\atcUtility\atcUtility-D4EM15.vbproj">
+      <Project>{67027820-9036-481E-80F6-077E5085F59D}</Project>
+      <Name>atcUtility-D4EM15</Name>
+      <Private>False</Private>
+    </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\MapWinUtility-D4EM15.vbproj">
       <Project>{3c991ae4-9edb-4c24-baf3-42f7303d7df3}</Project>
       <Name>MapWinUtility-D4EM15</Name>
