--- a/atcUCI/atcUCI-D4EM15.vbproj
+++ b/atcUCI/atcUCI-D4EM15.vbproj
@@ -294,6 +294,11 @@
     <Compile Include="modVb2F90.vb" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\atcControls\atcControls-D4EM15.vbproj">
+      <Project>{B219575F-1541-41DB-9FA4-D9D7CD62B4A5}</Project>
+      <Name>atcControls-D4EM15</Name>
+      <Private>False</Private>
+    </ProjectReference>
     <ProjectReference Include="..\atcData\atcData-D4EM15.vbproj">
       <Project>{A9A00CAD-9EAD-4228-AB08-6DC3BAF253AA}</Project>
       <Name>atcData-D4EM15</Name>
@@ -302,6 +307,11 @@
     <ProjectReference Include="..\atcSegmentation\atcSegmentation-D4EM15.vbproj">
       <Project>{813E3F46-36CA-4320-BB05-325EEC553D3D}</Project>
       <Name>atcSegmentation-D4EM15</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\atcUtility\atcUtility-D4EM15.vbproj">
+      <Project>{67027820-9036-481E-80F6-077E5085F59D}</Project>
+      <Name>atcUtility-D4EM15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcWDM\atcWDM-D4EM15.vbproj">
