--- a/atcUCI/atcUCI15.vbproj
+++ b/atcUCI/atcUCI15.vbproj
@@ -68,6 +68,9 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System">
+      <Name>System</Name>
+    </Reference>
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
