usgs toolbox dotspatial migration updates
-enable timeseries statistics in dotspatial
-template for statusmonitor
-additional demo ui components

--- a/BASINSDS/BASINSDS.csproj
+++ b/BASINSDS/BASINSDS.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsPluginProperties.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
