--- a/RunR/packages.config
+++ b/RunR/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DynamicInterop" version="0.7.4" targetFramework="net4" />
-  <package id="R.NET.Community" version="1.6.5" targetFramework="net4" />
+  <package id="DynamicInterop" version="0.9.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
+  <package id="R.NET" version="1.8.2" targetFramework="net472" />
+  <package id="R.NET.Community" version="1.7.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
 </packages>
