--- a/atcUSGSDF2P/atcUSGSDF2P.vbproj
+++ b/atcUSGSDF2P/atcUSGSDF2P.vbproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4CDFEB5C-1808-44AD-9206-0049FF26FA2E}</ProjectGuid>
+    <ProjectGuid>{3D007252-DD48-4288-97BC-5E1657839FBB}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>atcUSGSDF2P</RootNamespace>
-    <AssemblyName>atcUSGSDF2P</AssemblyName>
+    <RootNamespace>atcUSGSRecess</RootNamespace>
+    <AssemblyName>atcUSGSRecess</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
@@ -16,11 +16,6 @@
     <OptionCompare>Binary</OptionCompare>
     <OptionStrict>Off</OptionStrict>
     <OptionInfer>On</OptionInfer>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <OldToolsVersion>3.5</OldToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,8 +23,8 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>..\Bin\Plugins\BASINS\</OutputPath>
-    <DocumentationFile>atcUSGSDF2P.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
+    <DocumentationFile>atcUSGSRecess.xml</DocumentationFile>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,26 +32,25 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>..\Bin\Plugins\BASINS\</OutputPath>
-    <DocumentationFile>atcUSGSDF2P.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
+    <DocumentationFile>atcUSGSRecess.xml</DocumentationFile>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>..\Bin\Plugins\Basins\</OutputPath>
-    <DocumentationFile>atcUSGSDF2P.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
+    <DocumentationFile>atcUSGSRecess.xml</DocumentationFile>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
-    <DefineConstants>Toolbox="Hydro"</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\x86\Release\</OutputPath>
-    <DocumentationFile>atcUSGSDF2P.xml</DocumentationFile>
+    <DocumentationFile>atcUSGSRecess.xml</DocumentationFile>
     <Optimize>true</Optimize>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
@@ -91,11 +85,23 @@
     <Compile Include="clsMRC.vb" />
     <Compile Include="clsRecess.vb" />
     <Compile Include="clsRecessionSegment.vb" />
-    <Compile Include="clsUSGSDF2PAnalysis.vb" />
-    <Compile Include="frmDF2P.Designer.vb">
-      <DependentUpon>frmDF2P.vb</DependentUpon>
+    <Compile Include="clsUSGSRecessAnalysis.vb" />
+    <Compile Include="frmMRCControl.Designer.vb">
+      <DependentUpon>frmMRCControl.vb</DependentUpon>
     </Compile>
-    <Compile Include="frmDF2P.vb">
+    <Compile Include="frmMRCControl.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRecess.Designer.vb">
+      <DependentUpon>frmRecess.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmRecess.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUSGSRecessOriginal.Designer.vb">
+      <DependentUpon>frmUSGSRecessOriginal.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmUSGSRecessOriginal.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -115,9 +121,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="frmDF2P.resx">
-      <DependentUpon>frmDF2P.vb</DependentUpon>
-      <SubType>Designer</SubType>
+    <EmbeddedResource Include="frmMRCControl.resx">
+      <DependentUpon>frmMRCControl.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRecess.resx">
+      <DependentUpon>frmRecess.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmUSGSRecessOriginal.resx">
+      <DependentUpon>frmUSGSRecessOriginal.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -138,39 +149,34 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\atcTimeseriesBaseflow\atcTimeseriesBaseflow15.vbproj">
-      <Project>{f9a4070c-1faf-4d17-a8e6-7eb19d414b05}</Project>
-      <Name>atcTimeseriesBaseflow15</Name>
+    <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility.vbproj">
+      <Project>{3C991AE4-9EDB-4C24-BAF3-42F7303D7DF3}</Project>
+      <Name>BASINS-MapWinUtility</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
-      <Project>{33E88992-742F-4D13-823F-35D6A07B1AA1}</Project>
-      <Name>BASINS-MapWinUtility15</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\atcData\atcData15.vbproj">
+    <ProjectReference Include="..\atcData\atcData.vbproj">
       <Project>{A9A00CAD-9EAD-4228-AB08-6DC3BAF253AA}</Project>
-      <Name>atcData15</Name>
+      <Name>atcData</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\atcGraphExperimental\atcGraph15.vbproj">
+    <ProjectReference Include="..\atcGraphExperimental\atcGraph.vbproj">
       <Project>{D52E1A9C-E219-4DF7-9CA8-B4FD1B28CEC9}</Project>
-      <Name>atcGraph15</Name>
+      <Name>atcGraph</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\atcTimeseriesRDB\atcTimeseriesRDB15.vbproj">
-      <Project>{82530A5B-FF39-4B9F-8A04-881468DFC662}</Project>
-      <Name>atcTimeseriesRDB15</Name>
+    <ProjectReference Include="..\atcTimeseriesRDB\atcTimeseriesRDB.vbproj">
+      <Project>{EA68C9C7-8A7A-4EDF-8944-413E4E7FA276}</Project>
+      <Name>atcTimeseriesRDB</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\atcUSGSUtility\atcUSGSUtility15.vbproj">
+    <ProjectReference Include="..\atcUSGSUtility\atcUSGSUtility.vbproj">
       <Project>{4DBC8159-1072-41FA-9242-933E12A88EE6}</Project>
-      <Name>atcUSGSUtility15</Name>
+      <Name>atcUSGSUtility</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
+    <ProjectReference Include="..\atcUtility\atcUtility.vbproj">
       <Project>{67027820-9036-481E-80F6-077E5085F59D}</Project>
-      <Name>atcUtility15</Name>
+      <Name>atcUtility</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
