update atcData project files per dotsptial scope separation

--- a/atcData/atcData-D4EM10.vbproj
+++ b/atcData/atcData-D4EM10.vbproj
@@ -266,6 +266,8 @@
     <Compile Include="frmSpecifyYearSubset.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="IDataManagement.vb" />
+    <Compile Include="IDataMemory.vb" />
     <Compile Include="modMetData.vb" />
     <Compile Include="modTimeseriesMath.vb">
       <SubType>Code</SubType>
