dotspatial migration update per recent file and handling of project data

--- a/atcSynopticAnalysis/atcSynopticAnalysis-DSC.vbproj
+++ b/atcSynopticAnalysis/atcSynopticAnalysis-DSC.vbproj
@@ -57,6 +57,8 @@
     <WarningLevel>1</WarningLevel>
     <NoWarn>42016,42017,42018,42019,42032,42353,42354,42355</NoWarn>
     <DebugType>full</DebugType>
+    <DefineConstants>
+    </DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>..\bin\Debug</OutputPath>
