--- a/atcData/atcData-DSC.vbproj
+++ b/atcData/atcData-DSC.vbproj
@@ -58,7 +58,7 @@
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>GISProvider="DotSpatial"</DefineConstants>
+    <DefineConstants>GISProvider="DotSpatial",Toolbox="Hydro"</DefineConstants>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <DebugSymbols>true</DebugSymbols>
