--- a/atcSeasonalAttributes/atcSeasonalAttributes-DSC.vbproj
+++ b/atcSeasonalAttributes/atcSeasonalAttributes-DSC.vbproj
@@ -55,8 +55,7 @@
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants>Toolbox="Hydro"</DefineConstants>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <DebugSymbols>true</DebugSymbols>
